# ENGG1340-COMP2113-GP

./: .gitignore  Animation.cpp  CMakeLists.txt  Combat.cpp  Combat.h  CombatResult.cpp  CombatResult.h  Constants.h  Difficulty.h  Doxyfile  FarmGame.h  Friday1.txt  Friday4.txt  Game.cpp  Makefile  Monday2.txt  Monday3.txt  Monday4.txt  Monday5.txt  Player.cpp  Player.h  README.md  Terminal.cpp  Terminal.h  Thursday3.txt  Tuesday.txt  Tuesday4.txt  UI.cpp  UI.h  Weapon.cpp  Wednesday3.txt  Wednesday4.txt  Wednesday5.txt  WeekCycle.cpp  WeekCycle.h  Zombie.h  counter-ImproveLevel.cpp  counter-logo.cpp  counter-weapon.cpp  crop.txt  (+40 more)
Ani/: title.cpp
Ani/Loading/: 0.txt  1.txt  10.txt
Ani/Lose1/: 0.txt  4.txt  7.txt  9.txt
Ani/Lose2/: 5.txt  6.txt  7.txt
Ani/Title/: 0.txt  12.txt  14.txt  15.txt  20.txt  25.txt  31.txt  33.txt  4.txt  6.txt  9.txt
Ani/Win1/: 0.txt  1.txt  9.txt
Ani/Win3/: 5.txt
Counters/: CounterBase.h  Farming.cpp  Farming.h  Mining.cpp  Recruit.cpp
anim/: title.cpp
anim/Fight/: 1.txt  2.txt  3.txt  4.txt  5.txt
anim/Loading/: 11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  8.txt
anim/Lose1/: 1.txt  2.txt  3.txt  5.txt  6.txt
anim/Lose2/: 1.txt  3.txt  4.txt  8.txt  9.txt
anim/Protect/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
anim/Title/: 1.txt  10.txt  12.txt  (+14 more)
assets/: home.txt
combat graph/: fight2.txt  fight3.txt  fight4.txt  fight5.txt  home4.txt  protect2.txt  protect3.txt  protect6.txt  your2.txt  your3.txt
src/: Constants.h  main.cpp
ui/: empty.txt
(+93 files in other folders)
